package com.yyf.app.ch601;

/**
 * 富哥们
 * @author YYF.
 * date 2023/3/8 23:30.
 */
public interface FuGemen {

    /**
     * 展示财力
     */
    void showPower();
}
